@@ -79,8 +79,8 @@ Global
 		{738F2015-0DC7-4C38-BBF0-90FD5C3C2518}.Release|x64.ActiveCfg = Release|x64
 		{738F2015-0DC7-4C38-BBF0-90FD5C3C2518}.Release|x86.ActiveCfg = Release|x86
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|Any CPU.ActiveCfg = Debug|x64
-		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.ActiveCfg = Debug|Win32
-		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.Build.0 = Debug|Win32
+		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.ActiveCfg = Debug|x64
+		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.Build.0 = Debug|x64
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x86.ActiveCfg = Debug|Win32
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x86.Build.0 = Debug|Win32
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Release|Any CPU.ActiveCfg = Release|x64
